@@ -1,5 +1,5 @@
 
-R version 4.1.1 Patched (2021-10-12 r81047) -- "Kick Things"
+R version 4.1.2 Patched (2021-11-01 r81118) -- "Bird Hippie"
 Copyright (C) 2021 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -64,6 +64,29 @@ Type 'q()' to quit R.
 function (x, Asym, xmid, scal)  
  - attr(*, "initial")=function (mCall, LHS, data)  
  - attr(*, "class")= chr "selfStart"
+> ## with parameters  and  getInitial():
+> logist <- selfStart(logist, initial = logistInit,
++                     parameters = c("Asym", "xmid", "scal"))
+> tools::assertWarning(verbose = TRUE,
++  in1 <- getInitial(circumference ~ logist(age, Asym, xmid, scal), Orange)
++ ) # no warning previously
+Asserted warning: selfStart initializing functions should have a final '...' argument since R 4.1.0
+> ## but this then failed, now gives the same warning:
+> tools::assertWarning(verbose = TRUE,
++  fm <- nls(circumference ~ logist(age, Asym, xmid, scal), Orange)
++ )
+Asserted warning: selfStart initializing functions should have a final '...' argument since R 4.1.0
+> ## in R 4.1.{0,1} gave
+> ## Error in (attr(object, "initial"))(mCall = mCall, data = data, LHS = LHS,  :
+> ##  unused arguments (control = list(.......), trace = FALSE)
+> ## IGNORE_RDIFF_BEGIN
+> coef(summary(fm))
+     Estimate Std. Error t value   Pr(>|t|)
+Asym   192.69     20.244  9.5182 7.4824e-11
+xmid   728.76    107.299  6.7919 1.1202e-07
+scal   353.53     81.472  4.3393 1.3382e-04
+> ## IGNORE_RDIFF_END
+> 
 > 
 > ## lower and upper in algorithm="port"
 > set.seed(123)
@@ -795,4 +818,4 @@ List of 2
 > 
 > proc.time()
    user  system elapsed 
-  1.664   0.069   1.725 
+  0.972   0.102   1.178 
